--- a/orcamento25.html
+++ b/orcamento25.html
@@ -45,7 +45,7 @@
             text-align: left; /* Alinhar o link à esquerda */
         }
         #wordInput {
-            padding: 10px;
+            padding: 10px 10px 10px 10px;
             border: 2px solid #007bff;
             border-radius: 5px;
             width: 97%; /* Barra de pesquisa a toda a largura */
