--- a/orcamento25.html
+++ b/orcamento25.html
@@ -241,8 +241,8 @@
 
         // View context for the selected result
         function viewContext(previousSentence, currentSentence, nextSentence) {
-            alert(`Parágrafo anterior: "${previousSentence}"\n\nParágrafo atual: "${currentSentence}"\n\nParágrafo seguinte: "${nextSentence}"`);
-        }
+    alert(`${previousSentence}\n\n${currentSentence}\n\n${nextSentence}`);
+}
 
         // View the PDF at the specified page
         function viewPdf(page) {
