--- a/iphonefuga.html
+++ b/iphonefuga.html
@@ -162,6 +162,9 @@
 
         <h2><strong>E qual o impacto disto na confiança no Estado?</strong></h2>
         <p>"Se eu for auditar os serviços, e eu trabalhei nisto, consigo encontrar buracos por todo lado. E vai ser muito difícil alguém garantir-me que ninguém alterou aqueles dados", sublinha José Tribolet. "Eu não estou a dizer que eles estão alterados, mas nós precisamos de provas positivas, de garantias, de que os dados são fidedignos e que não foram alterados, não foram hackeados. E não podemos esquecer que uma fonte normal de fazer estes ataques e estas penetrações são as próprias pessoas das organizações. Muitas vezes não são bandidos externos, são pessoas das organizações. Então é preciso proteger contra isso também."</p>
+
+        <!-- Adicionando a palavra "FIM" -->
+        <p style="color: #007bff; font-size: 20px; font-weight: bold; margin-top: 20px;">FIM</p>
     </div>
 </div>
 
