--- a/iphonefuga.html
+++ b/iphonefuga.html
@@ -118,7 +118,7 @@
 
 <div class="container">
     <h1>FUGA DE DADOS</h1> <!-- Título atualizado -->
-    <p class="instruction">Insira o número de contribuinte que quer pesquisar e veja se esse número foi apanhado na fuga de dados.</p>
+    <p class="instruction">Insira o número de contribuinte que quer pesquisar e veja se esse número foi apanhado na fuga de dados. Os resultados apresentados não dispensam a consulta das entidades oficiais para confirmação dos mesmos</p>
     <div id="loading"><strong>A CARREGAR</strong><br><span class="subtext">Aguarde, é rápido</span></div>
     <input type="text" id="contribuinte" placeholder="Insira o número de contribuinte">
     <button onclick="verificarContribuinte()">Verificar</button>
@@ -129,7 +129,7 @@
     <!-- Texto longo abaixo dos resultados -->
     <div id="informacao" style="display:none;">
         <h2><strong>O que é que se passou?</strong></h2>
-        <p>Uma lista com cerca de 15 mil credenciais de acesso ao Portal das Finanças começou a circular online. A existência desta lista - divulgada terça-feira pelo Expresso e à que a CNN Portugal teve acesso - tem o número de contribuinte e as passwords que 15 mil cidadãos utilizam para acederem ao Portal das Finanças. A lista terá sido detetada por causa de um recente ataque à chave móvel digital - a 10 de outubro, as infraestruturas da Agência para a Modernização Administrativa (AMA) foram alvo de um ciberataque. Destas 15 mil passwords, a grande maioria é verdadeira.</p>
+        <p>Uma lista com cerca de 15 mil credenciais de acesso ao Portal das Finanças começou a circular online. A existência desta lista - divulgada terça-feira pelo Expresso e à qual a CNN Portugal teve acesso - tem o número de contribuinte e as passwords que 15 mil cidadãos utilizam para acederem ao Portal das Finanças. A lista terá sido detetada por causa de um recente ataque à chave móvel digital - a 10 de outubro, as infraestruturas da Agência para a Modernização Administrativa (AMA) foram alvo de um ciberataque. Destas 15 mil passwords, a grande maioria é verdadeira.</p>
         <div class="separator"></div>
 
         <h2><strong>Quantas passwords foram roubadas mesmo?</strong></h2>
@@ -196,7 +196,12 @@
         const passwordWarning = document.querySelector(".password-warning");
 
         if (numero.length !== 9 || isNaN(numero)) {
-            message.textContent = "Por favor, insira um número válido de 9 dígitos.";
+            const digitsMissing = 9 - numero.length;
+            if (digitsMissing > 0) {
+                message.textContent = `Por favor, insira um número de 9 dígitos. Falta ${digitsMissing} ${digitsMissing === 1 ? 'dígito' : 'dígitos'}.`;
+            } else {
+                message.textContent = `Por favor, insira um número de 9 dígitos. Você inseriu ${Math.abs(digitsMissing)} ${Math.abs(digitsMissing) === 1 ? 'dígito' : 'dígitos'} a mais.`;
+            }
             message.className = "error";
             message.style.display = "block"; // Exibir mensagem de erro
             passwordWarning.style.display = "none"; // Ocultar aviso de senha
@@ -213,7 +218,7 @@
             message.className = "error";
             passwordWarning.style.display = "block"; // Mostrar aviso de senha
         } else {
-            message.innerHTML = "O número de contribuinte que pesquisou não está incluído no ficheiro que está a circular com a fuga de dados. De qualquer maneira, leia o texto em baixo para tomar precauções e evitar problemas.";
+            message.innerHTML = "O número de contribuinte que pesquisou não está incluído no ficheiro que está a circular. De qualquer maneira, leia o texto em baixo para tomar precauções e evitar problemas.";
             message.className = "success";
             passwordWarning.style.display = "none"; // Ocultar aviso de senha
         }
