--- a/iphonefuga.html
+++ b/iphonefuga.html
@@ -18,7 +18,7 @@
             padding: 20px; /* Espaçamento interno */
             border-radius: 8px; /* Bordas arredondadas */
             width: calc(100% - 40px); /* Largura com margem de 20px em cada lado */
-            margin: 20px auto; /* Margem superior/inferior de 20px e centraliza horizontalmente */
+            margin: 20px 0; /* Margem superior/inferior de 20px e centraliza horizontalmente */
             box-sizing: border-box; /* Inclui padding e bordas no cálculo da largura */
         }
 
