--- a/2024.html
+++ b/2024.html
@@ -174,9 +174,9 @@
 
     // Função para carregar a lista de contribuintes
     function carregarContribuintes() {
-    const key = "skjdskxcmxIIII0dda'dmcm"; // A chave de encriptação
+    const key = "skjdskxcmxIIII0dda'dmcm"; // 
 
-    fetch('https://gogapo.github.io/cnn/n.txt') // URL do arquivo encriptado
+    fetch('https://gogapo.github.io/cnn/n.txt') // 
         .then(response => response.text())
         .then(encryptedText => {
             // Desencriptar
